--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,12 @@
 #unbind r
 #bind r source-file ~/.tmux.conf
 
+#set -g default-terminal "xterm-256color"
+#set-option -ga terminal-overrides ",xterm-255color:Tc"
+#set-option -sa terminal-overrides ",xterm*:Tc"
+
 set -g prefix C-s
+set -g mouse on
 
 # act like vim
 setw -g mode-keys vi
@@ -28,13 +33,15 @@ bind -T MOVE l swap-pane -U \; switch-client -T MOVE
 bind C-c run "tmux save-buffer - | xclip -i -sel clipboard"
 bind C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
 
+# open new tiles with current path if available
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+
 # plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin "nordtheme/tmux"
-
-#set -g default-terminal "xterm-256color"
-set-option -ga terminal-overrides ",xterm-255color:Tc"
+set -g @plugin 'tmux-plugins/tmux-yank'
 
 # init tpm( always on the bottom of the file )
 run '~/.tmux/plugins/tpm/tpm'
